--- a/app/.env
+++ b/app/.env
@@ -5,6 +5,6 @@ DEVICE_NAME = "FreeboxMonitoring"
 
 BASE_API_URL = "http://mafreebox.freebox.fr"
 
-TOKEN_FILE_PATH = token.json
+TOKEN_FILE_PATH = /token/token.json
 SCRAPE_INTERVAL = 30
 PORT_HTTP = 8000
