--- a/app/.env
+++ b/app/.env
@@ -3,8 +3,9 @@ APP_NAME = "FreeboxMonitoring"
 APP_VERSION = "0.0.1"
 DEVICE_NAME = "FreeboxMonitoring"
 
-BASE_API_URL = "http://mafreebox.freebox.fr"
+BASE_API_URL = "https://mafreebox.freebox.fr"
 
 TOKEN_FILE_PATH = /token/token.json
+CERT_FILE_PATH = /app/cert/freebox_ecc_root_ca.pem
 SCRAPE_INTERVAL = 30
 PORT_HTTP = 8000
